// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxInput Component CheckboxInput renders highlighted 1`] = `
<div>
  <div
    class="container"
  >
    <label
      class="label readOnly"
      for="checkbox-31"
      tabindex="-1"
    >
      <div
        aria-checked="false"
        aria-label="checkbox label 0"
        class="checkboxMarker readOnly"
        id="checkbox-31"
        role="checkbox"
      >
        <i
          class="icon"
          icon="fas,square"
        />
      </div>
      checkbox label 0
    </label>
    <label
      class="label readOnly checked"
      for="checkbox-32"
      tabindex="-1"
    >
      <div
        aria-checked="true"
        aria-label="checkbox label 1"
        class="checkboxMarker checked readOnly"
        id="checkbox-32"
        role="checkbox"
      >
        <i
          class="icon"
          icon="fas,square-check"
        />
      </div>
      checkbox label 1
    </label>
    <label
      class="label readOnly"
      for="checkbox-33"
      tabindex="-1"
    >
      <div
        aria-checked="false"
        aria-label="checkbox label 2"
        class="checkboxMarker readOnly"
        id="checkbox-33"
        role="checkbox"
      >
        <i
          class="icon"
          icon="fas,square"
        />
      </div>
      checkbox label 2
    </label>
    <label
      class="label readOnly"
      for="checkbox-34"
      tabindex="-1"
    >
      <div
        aria-label="checkbox label 3"
        class="checkboxMarker readOnly"
        id="checkbox-34"
        role="checkbox"
      >
        <i
          class="icon"
          icon="fas,square"
        />
      </div>
      checkbox label 3
    </label>
    <label
      class="label readOnly highlighted"
      for="checkbox-35"
      tabindex="-1"
    >
      <div
        aria-label="checkbox label 4"
        class="checkboxMarker readOnly"
        id="checkbox-35"
        role="checkbox"
      >
        <i
          class="icon"
          icon="fas,square"
        />
      </div>
      checkbox label 4
    </label>
    <label
      class="label readOnly"
      for="checkbox-36"
      tabindex="-1"
    >
      <div
        aria-label="checkbox label 5"
        class="checkboxMarker readOnly"
        id="checkbox-36"
        role="checkbox"
      >
        <i
          class="icon"
          icon="fas,square"
        />
      </div>
      checkbox label 5
    </label>
  </div>
</div>
`;

exports[`CheckboxInput Component CheckboxInput renders with input 1`] = `
<div>
  <div
    class="container"
  >
    <label
      class="label"
      for="checkbox-1"
      tabindex="0"
    >
      <div
        aria-label="checkbox label 0"
        class="checkboxMarker"
        id="checkbox-1"
        role="checkbox"
      >
        <i
          class="icon"
          icon="fal,square"
        />
      </div>
      checkbox label 0
    </label>
    <label
      class="label checked"
      for="checkbox-2"
      tabindex="0"
    >
      <div
        aria-checked="true"
        aria-label="checkbox label 1"
        class="checkboxMarker checked"
        id="checkbox-2"
        role="checkbox"
      >
        <i
          class="icon"
          icon="fas,square-check"
        />
      </div>
      checkbox label 1
    </label>
    <label
      class="label"
      for="checkbox-3"
      tabindex="0"
    >
      <div
        aria-checked="false"
        aria-label="checkbox label 2"
        class="checkboxMarker"
        id="checkbox-3"
        role="checkbox"
      >
        <i
          class="icon"
          icon="fal,square"
        />
      </div>
      checkbox label 2
    </label>
    <label
      class="label"
      for="checkbox-4"
      tabindex="0"
    >
      <div
        aria-label="checkbox label 3"
        class="checkboxMarker"
        id="checkbox-4"
        role="checkbox"
      >
        <i
          class="icon"
          icon="fal,square"
        />
      </div>
      checkbox label 3
    </label>
    <label
      class="label"
      for="checkbox-5"
      tabindex="0"
    >
      <div
        aria-label="checkbox label 4"
        class="checkboxMarker"
        id="checkbox-5"
        role="checkbox"
      >
        <i
          class="icon"
          icon="fal,square"
        />
      </div>
      checkbox label 4
    </label>
    <label
      class="label"
      for="checkbox-6"
      tabindex="0"
    >
      <div
        aria-label="checkbox label 5"
        class="checkboxMarker"
        id="checkbox-6"
        role="checkbox"
      >
        <i
          class="icon"
          icon="fal,square"
        />
      </div>
      checkbox label 5
    </label>
  </div>
</div>
`;

exports[`CheckboxInput Component CheckboxInput renders with no options 1`] = `
<div>
  <div
    class="container"
  />
</div>
`;
